fixed mobile overflow bug

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 	font-family: "IBM Plex Sans", sans-serif;
 }
 
+img {
+	max-width: 100%;
+}
+
 body {
 	background-color: var(--color-white);
 	color: var(--color-black);
@@ -279,8 +283,8 @@ footer p {
 		margin-left: 2rem;
 
 		h1 {
-			font-size: 3.5rem;
-			line-height: 3.5rem;
+			font-size: 3rem;
+			line-height: 3rem;
 		}
 	}
 
